--- a/shift-microserver.html
+++ b/shift-microserver.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<script type="text/javascript" charset="UTF-8" src="config.js"></script>
 <script type="text/javascript" charset="UTF-8" src="shift-microserver.js"></script>
 <body>
 If this is being display, something terrible has happened.
